# avz

./: CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  release.yml
Formula/: avz.rb
src/: cli.rs  convert.rs  error.rs  lib.rs  main.rs
src/commands/: cat.rs  concat.rs  count.rs  fingerprint.rs  fromjson.rs  grep.rs  head.rs  meta.rs  mod.rs  random.rs  recodec.rs  schema.rs  validate.rs
src/io/: input.rs  mod.rs  resolver.rs  s3.rs
