[package]
name = "avz"
version = "0.1.0"
edition = "2021"
description = "Blistering-fast Avro CLI tool — a modern replacement for avro-tools and fastavro"
license = "MIT OR Apache-2.0"
repository = "https://github.com/arunma/avz"
keywords = ["avro", "cli", "data", "serialization"]
categories = ["command-line-utilities", "encoding"]

[[bin]]
name = "avz"
path = "src/main.rs"

[dependencies]
apache-avro = { version = "0.17", features = ["snappy", "zstandard", "bzip", "xz"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
clap = { version = "4", features = ["derive"] }
glob = "0.3"
aws-config = "1"
aws-sdk-s3 = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
thiserror = "2"
sha2 = "0.10"
md-5 = "0.10"
rand = "0.8"
hex = "0.4"
colored_json = "5.0.0"
regex = "1.12.3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
